--- a/config/M3-ID-Rev0_printer.cfg
+++ b/config/M3-ID-Rev0_printer.cfg
@@ -1,4 +1,4 @@
-# M3-ID Rev.1 Klipper Configuration:
+# M3-ID Rev.0 Klipper Configuration:
 # RAMBo Electronics Board
 # V4 Hotend
 # Black Z-Motor
@@ -119,26 +119,9 @@ pin: PH5
 [heater_fan heatbreak_cooling_fan]
 pin: PH3
 
-[bltouch]
-sensor_pin: ^PE3
-control_pin: PG5
-x_offset: 21
-y_offset: 0
-#z_offset: 0
-speed: 10.0
-samples: 3
-probe_with_touch_mode: true
-
-[bed_mesh]
-speed: 120
-horizontal_move_z: 5
-mesh_min: 20, 20
-mesh_max: 180, 230
-probe_count: 3, 3
-
 # Serial needs to be edited for each electronics board
 [mcu]
-serial: /dev/serial/by-id/usb-UltiMachine__ultimachine.com__RAMBo_85532313932351C03291-if00
+serial:
 baud: 250000
 
 [printer]
@@ -279,26 +262,3 @@ gcode:
 #    SET_INPUT_SHAPER SHAPER_TYPE_X=<dual_carriage_shaper> SHAPER_FREQ_X=<dual_carriage_freq> SHAPER_TYPE_Y=<y_shaper> SHAPER_FREQ_Y=<y_freq>
 #    SET_DUAL_CARRIAGE CARRIAGE=0
 #    SET_INPUT_SHAPER SHAPER_TYPE_X=<primary_carriage_shaper> SHAPER_FREQ_X=<primary_carriage_freq> SHAPER_TYPE_Y=<y_shaper> SHAPER_FREQ_Y=<y_freq>
-
-#*# <---------------------- SAVE_CONFIG ---------------------->
-#*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
-#*#
-#*# [bed_mesh default]
-#*# version = 1
-#*# points =
-#*# 	0.113922, 0.009246, -0.053824
-#*# 	0.079580, 0.005944, -0.047550
-#*# 	0.128781, 0.026747, -0.068353
-#*# x_count = 3
-#*# y_count = 3
-#*# mesh_x_pps = 2
-#*# mesh_y_pps = 2
-#*# algo = lagrange
-#*# tension = 0.2
-#*# min_x = 20.0
-#*# max_x = 180.0
-#*# min_y = 19.99
-#*# max_y = 230.01
-#*#
-#*# [bltouch]
-#*# z_offset = 1.248
