--- a/config/M3-SE-Rev1_printer.cfg
+++ b/config/M3-SE-Rev1_printer.cfg
@@ -1,4 +1,4 @@
-# M3-SE Rev.005 Klipper Configuration:
+# M3-SE Rev.1 Klipper Configuration:
 # RAMBo Electronics Board
 # V4 Hotend
 # Black Z-Motor
@@ -13,30 +13,10 @@ enable_pin: !PA7
 microsteps: 16
 rotation_distance: 39.95
 endstop_pin: ^PB6
-position_endstop: -20.77
-position_min: -20.77
-position_max: 205
+position_endstop: -4
+position_min: -4
+position_max: 220
 homing_speed: 50
-
-[dual_carriage]   # X1-Axis configuration
-axis: x
-safe_distance: 30 #could probably go lower ? 
-step_pin: PC6
-step_pulse_duration: 0.000002
-dir_pin: PA1
-enable_pin: !PA0
-microsteps: 16
-rotation_distance: 39.95
-endstop_pin: ^PA2 # X-Max
-position_endstop:  252
-position_min: 23
-position_max: 252
-homing_speed: 15
-
-[servo x1]
-
-# missing the microstep pins :/
-
 
 [stepper_y]
 step_pin: PC1
@@ -87,26 +67,6 @@ min_temp: 0
 max_temp: 300
 max_extrude_only_distance: 999
 
-[extruder1]
-step_pin: PC4
-dir_pin: PL7
-enable_pin: PA3
-microsteps: 16
-gear_ratio: 57:11
-rotation_distance: 31.174
-nozzle_diameter: 0.350
-filament_diameter: 1.750
-heater_pin: PH4
-sensor_type: EPCOS 100K B57560G104F
-sensor_pin: PF1
-control: pid
-pid_kp: 16.83
-pid_ki: 1.1
-pid_kd: 64.51
-min_temp: 0
-max_temp: 300
-max_extrude_only_distance: 999
-
 [heater_bed]
 heater_pin: PE5
 sensor_type: EPCOS 100K B57560G104F
@@ -144,7 +104,7 @@ probe_count: 3, 3
 
 # Serial needs to be edited for each electronics board
 [mcu]
-serial: /dev/serial/by-id/usb-UltiMachine__ultimachine.com__RAMBo_85532313932351C03291-if00
+serial:
 baud: 250000
 
 [printer]
@@ -182,19 +142,8 @@ pins:
     PK3, PK4,
     PK1, PK2
 
-[output_pin dual_carriage_current]
-#define MOTOR_CURRENT_PWM_XY_PIN 46
-pin: PL4
-pwm: True
-scale: 2.0
-cycle_time: .000030
-hardware_pwm: True
-value: 1.300
-#   PC5, PL5
-
 [static_digital_output yellow_led]
 pins: !PB7
-
 
 # The following config is for the KUSBA USB Accelerometer:
 # https://github.com/xbst/KUSBA
